unpackaged/main/default/objects/Financial_Account_Role__c/Financial_Account_Role__c.object-meta.xml
<CustomObject>
    <label>Financial Account Role</label>
    <nameField>
        <displayFormat>FAR-{0000000}</displayFormat>
        <label>Financial Account Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Account Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>