unpackaged/main/default/objects/Financial_Account_Role__c/fields/Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account__c</fullName>
    <label>Financial Account</label>
    <referenceTo>Financial_Account__c</referenceTo>
    <relationshipLabel>Financial Account Roles</relationshipLabel>
    <relationshipName>Financial_Account_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>