unpackaged/main/default/objects/Financial_Account_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary Owner</fullName>
            </value>
            <value>
                <fullName>Joint Owner</fullName>
            </value>
            <value>
                <fullName>Beneficiary</fullName>
            </value>
            <value>
                <fullName>Custodian</fullName>
            </value>
            <value>
                <fullName>Trusted Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>